--- a/Homeopathy/wars.html
+++ b/Homeopathy/wars.html
@@ -19,7 +19,7 @@
     <div class="inner">
         <a href="https://www.hygieiahomeopathy.com" class="logo">Hygieia Homeopathy</a>
         <nav id="nav">
-            <a href="index.html">Home</a>
+            <a href="home.html">Home</a>
             <a href="schedule.html">Schedule</a>
             <a href="wars.html">WARS</a>
             <a href="deliverables.html">Deliverables</a>
