Add missing end section tag

--- a/schedule.html
+++ b/schedule.html
@@ -56,8 +56,8 @@
                 </tbody>
             </table>
         </div>
-
     </div>
+</section>
     <footer id="footer">
         <div class="inner">
             <div class="flex">
