--- a/deliverables.html
+++ b/deliverables.html
@@ -19,7 +19,8 @@
             <a href="deliverables.html">Deliverables</a>
             <a href="gallery.html">Gallery</a>
             <a href="team.html">Team</a>
-            <a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
+        </nav>
+        <a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a>
     </div>
 </header>
 
