--- a/deliverables.html
+++ b/deliverables.html
@@ -113,11 +113,11 @@
             </article>
             <article>
                 <header>
-                    <h3>Other stuff</h3>
+                    <h3>Meeting Minutes</h3>
                 </header>
-                <p>Description</p>
+                <p>A record of our meetings</p>
                 <footer>
-                    <a href="" class="button special">View</a>
+                    <a href="./documentation/meeting_minutes.pdf" class="button special">View</a>
                     <br><hr>
                 </footer>
             </article>
