Barbara updated war

--- a/wars.html
+++ b/wars.html
@@ -128,9 +128,9 @@
                         </tr>
                         <tr class="row2">
                             <th scope="row">Barbara Amoros</th>
-                            <td></td>
-                            <td></td>
-                            <td><a href=""> WAR File</a></td>
+                            <td>Vision Document and Research</td>
+                            <td>3 hours</td>
+                            <td><a href="https://drive.google.com/file/d/1brQIxv2zToseUb8IWQef-KyP-VeVypis/view?usp=sharing"> WAR File</a></td>
                         </tr>
                         <tr class="row2">
                             <th scope="row">Trieu Truong</th>
