--- a/schedule.html
+++ b/schedule.html
@@ -51,7 +51,7 @@
                 <tr>
                     <td>3</td>
                     <td>September 28</td>
-                    <td>Stuff</td>
+                    <td>Use Cases and Glossary due 10/2</td>
                 </tr>
                 </tbody>
             </table>
