Added link to prototype

--- a/deliverables.html
+++ b/deliverables.html
@@ -72,9 +72,9 @@
                 <header>
                     <h3>Software Prototype</h3>
                 </header>
-                <p>Description</p>
+                <p>Take a look.</p>
                 <footer>
-                    <a href="" class="button special">View</a>
+                    <a href="https://balsamiq.cloud/s47dayi/peg83ah/r2278" class="button special">View</a>
                     <br><hr>
                 </footer>
             </article>
