--- a/wars.html
+++ b/wars.html
@@ -270,8 +270,8 @@
                         </tr>
                         <tr class="row2">
                             <th scope="row">Steve Priest</th>
-                            <td></td>
-                            <td></td>
+                            <td>Added prototype to site</td>
+                            <td>1 hour</td>
                             <td><a href=""> WAR File</a></td>
                         </tr>
                         </tbody>
