Added link to prototype

--- a/wars.html
+++ b/wars.html
@@ -226,7 +226,7 @@
             <a class="collapsed card-link"
                data-toggle="collapse"
                href="#week4">
-                <h7>Week 4:  Oct 5- Oct 12</h7></a>
+                <h7>Week 4:  Oct 5-12</h7></a>
         </div>
         <div class="collapse"
              data-parent="#accordion"
@@ -252,7 +252,7 @@
                         </tr>
                         <tr class="row2">
                             <th scope="row">Barbara Amoros</th>
-                            <td></td>
+                            <td>Designed prototype</td>
                             <td></td>
                             <td><a href=""> WAR File</a></td>
                         </tr>
