Barbara - Added WAR and Time

--- a/wars.html
+++ b/wars.html
@@ -253,8 +253,8 @@
                         <tr class="row2">
                             <th scope="row">Barbara Amoros</th>
                             <td>Designed prototype</td>
-                            <td></td>
-                            <td><a href=""> WAR File</a></td>
+                            <td>6 Hours</td>
+                            <td><a href="https://drive.google.com/file/d/1zmUqIFjkjYe0W9gYAe7_d-KqSj8jTaQx/view?usp=sharing"> WAR File</a></td>
                         </tr>
                         <tr class="row2">
                             <th scope="row">Trieu Truong</th>
