Updated deliverables, wars, and schedule for this week

--- a/deliverables.html
+++ b/deliverables.html
@@ -36,7 +36,7 @@
                 <header>
                     <h3>Vision and Scope Document</h3>
                 </header>
-                <p>High-level summary of what we're doing, and why we're doing it.</p>
+                <p>High-level summary of what we're doing, and why we're doing it</p>
                 <footer>
                     <a href="https://drive.google.com/file/d/1R7IeSejkC3GJhnVZBUp7uRO1MxSyDVc7/view?usp=sharing" class="button special">View</a>
                     <br>
@@ -48,7 +48,7 @@
                 <header>
                     <h3>Glossary</h3>
                 </header>
-                <p>Terms and definitions related to this project.</p>
+                <p>Terms and definitions related to this project</p>
                 <footer>
                     <a href="https://drive.google.com/file/d/1aAJ9Syq7SIfJtdAp9riTzmwR5cOkJybo/view?usp=sharing" class="button special">View</a>
                     <br>
@@ -60,7 +60,7 @@
                 <header>
                     <h3>Use Cases</h3>
                 </header>
-                <p>The way in which our users and product will interact.</p>
+                <p>The way in which our users and product will interact</p>
                 <footer>
                     <a href="https://drive.google.com/file/d/1pBrI2ACWUF-DWZqch2-wrmkFLNKhW4Sd/view?usp=sharing" class="button special">View</a>
                     <br>
@@ -72,7 +72,7 @@
                 <header>
                     <h3>Software Prototype</h3>
                 </header>
-                <p>Take a look.</p>
+                <p>First look</p>
                 <footer>
                     <a href="https://balsamiq.cloud/s47dayi/peg83ah/r2278" class="button special">View</a>
                     <br><hr>
@@ -94,9 +94,9 @@
                 <header>
                     <h3>Software Development Plan</h3>
                 </header>
-                <p>Description</p>
+                <p>Our roadmap</p>
                 <footer>
-                    <a href="" class="button special">View</a>
+                    <a href="https://drive.google.com/file/d/1GXtOj4wHP19quMZtJUUqugQUgI31V0LB/view?usp=sharing" class="button special">View</a>
                     <br><hr>
                 </footer>
             </article>
