--- a/schedule.html
+++ b/schedule.html
@@ -58,6 +58,11 @@
                     <td>October 5</td>
                     <td>Prototype due 10/12</td>
                 </tr>
+                <tr>
+                    <td>5</td>
+                    <td>October 12</td>
+                    <td>Software Development Plan due 10/19</td>
+                </tr>
                 </tbody>
             </table>
         </div>
