--- a/wars.html
+++ b/wars.html
@@ -253,7 +253,7 @@
                         <tr class="row2">
                             <th scope="row">Barbara Amoros</th>
                             <td>Designed prototype</td>
-                            <td></td>
+                            <td>6 hours</td>
                             <td><a href=""> WAR File</a></td>
                         </tr>
                         <tr class="row2">
@@ -272,6 +272,68 @@
                             <th scope="row">Steve Priest</th>
                             <td>Added prototype to site</td>
                             <td>1 hour</td>
+                            <td><a href=""> WAR File</a></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <br>
+
+    <div class="inner">
+        <div class="card-header">
+            <a class="collapsed card-link"
+               data-toggle="collapse"
+               href="#week5">
+                <h7>Week 5:  Oct 12-19</h7></a>
+        </div>
+        <div class="collapse"
+             data-parent="#accordion"
+             id="week5">
+            <div class="card-body">
+                <div class="card-body table-responsive">
+                    <br>
+                    <table class="inner">
+                        <thead>
+                        <tr>
+                            <th scope="col">Team Member</th>
+                            <th scope="col">Main Task</th>
+                            <th scope="col">Duration</th>
+                            <th scope="col">WAR Link</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="row2">
+                            <th scope="row">Delaney Ochs</th>
+                            <td></td>
+                            <td></td>
+                            <td><a href=""> WAR File</a></td>
+                        </tr>
+                        <tr class="row2">
+                            <th scope="row">Barbara Amoros</th>
+                            <td></td>
+                            <td></td>
+                            <td><a href=""> WAR File</a></td>
+                        </tr>
+                        <tr class="row2">
+                            <th scope="row">Trieu Truong</th>
+                            <td></td>
+                            <td></td>
+                            <td><a href=""> WAR File</a> </td>
+                        </tr>
+                        <tr class="row2">
+                            <th scope="row">Marko Vulovic</th>
+                            <td></td>
+                            <td></td>
+                            <td><a href=""> WAR File</a></td>
+                        </tr>
+                        <tr class="row2">
+                            <th scope="row">Steve Priest</th>
+                            <td></td>
+                            <td></td>
                             <td><a href=""> WAR File</a></td>
                         </tr>
                         </tbody>
