--- a/wars.html
+++ b/wars.html
@@ -314,9 +314,9 @@
                         </tr>
                         <tr class="row2">
                             <th scope="row">Barbara Amoros</th>
-                            <td></td>
-                            <td></td>
-                            <td><a href=""> WAR File</a></td>
+                            <td>Iteration Plan / Research </td>
+                            <td>1 hour</td>
+                            <td><a href="https://drive.google.com/file/d/1JZyLd9DRIdiuf8x6wr6l1w1YgoyGoEl8/view?usp=sharing"> WAR File</a></td>
                         </tr>
                         <tr class="row2">
                             <th scope="row">Trieu Truong</th>
