Fix Google Doc Link

--- a/wars.html
+++ b/wars.html
@@ -316,7 +316,7 @@
                             <th scope="row">Barbara Amoros</th>
                             <td>Iteration Plan / Research </td>
                             <td>1 hour</td>
-                            <td><a href="https://drive.google.com/file/d/1JZyLd9DRIdiuf8x6wr6l1w1YgoyGoEl8/view?usp=sharing"> WAR File</a></td>
+                            <td><a href="https://docs.google.com/document/d/1033zInQWgLWveA4tq5qTU4adRziRzNK9Wss74eSS0aY/edit?usp=sharing"> WAR File</a></td>
                         </tr>
                         <tr class="row2">
                             <th scope="row">Trieu Truong</th>
