--- a/wars.html
+++ b/wars.html
@@ -253,8 +253,8 @@
                         <tr class="row2">
                             <th scope="row">Barbara Amoros</th>
                             <td>Designed prototype</td>
-                            <td>6 hours</td>
-                            <td><a href=""> WAR File</a></td>
+                            <td>6 Hours</td>
+                            <td><a href="https://drive.google.com/file/d/1zmUqIFjkjYe0W9gYAe7_d-KqSj8jTaQx/view?usp=sharing"> WAR File</a></td>
                         </tr>
                         <tr class="row2">
                             <th scope="row">Trieu Truong</th>
@@ -314,9 +314,9 @@
                         </tr>
                         <tr class="row2">
                             <th scope="row">Barbara Amoros</th>
-                            <td></td>
-                            <td></td>
-                            <td><a href=""> WAR File</a></td>
+                            <td>Iteration Plan / Research</td>
+                            <td>1 hour</td>
+                            <td><a href="https://docs.google.com/document/d/1033zInQWgLWveA4tq5qTU4adRziRzNK9Wss74eSS0aY/edit?usp=sharing"> WAR File</a></td>
                         </tr>
                         <tr class="row2">
                             <th scope="row">Trieu Truong</th>
@@ -332,8 +332,8 @@
                         </tr>
                         <tr class="row2">
                             <th scope="row">Steve Priest</th>
-                            <td></td>
-                            <td></td>
+                            <td>Database creation</td>
+                            <td>3 hours</td>
                             <td><a href=""> WAR File</a></td>
                         </tr>
                         </tbody>
