--- a/wars.html
+++ b/wars.html
@@ -320,8 +320,8 @@
                         </tr>
                         <tr class="row2">
                             <th scope="row">Trieu Truong</th>
-                            <td></td>
-                            <td></td>
+                            <td>Populate database for Conjunctivitis, Constipation, and Cough</td>
+                            <td>1 hour</td>
                             <td><a href=""> WAR File</a> </td>
                         </tr>
                         <tr class="row2">
