--- a/wars.html
+++ b/wars.html
@@ -186,7 +186,7 @@
                             <th scope="row">Delaney Ochs</th>
                             <td>Use cases 4 and 5</td>
                             <td>3 hours</td>
-                            <td><a href=""> WAR File</a></td>
+                            <td><a href="https://drive.google.com/file/d/12PBi-0df-K7QyiG2a8BTs4sE0YG-n5FP/view"> WAR File</a></td>
                         </tr>
                         <tr class="row2">
                             <th scope="row">Barbara Amoros</th>
@@ -323,6 +323,7 @@
                             <td>Populate database for Conjunctivitis, Constipation, and Cough</td>
                             <td>1 hour</td>
                             <td><a href=""> WAR File</a> </td>
+                            <td><a href="https://docs.google.com/document/d/1gjrqXQeMdd_49M8hm6ZgK4XD-ZBrniDzGLPZPniwsKQ/edit?usp=sharing"> WAR File</a> </td>
                         </tr>
                         <tr class="row2">
                             <th scope="row">Marko Vulovic</th>
