Updated WARS, Deliverables and Schedule

--- a/wars.html
+++ b/wars.html
@@ -322,8 +322,69 @@
                             <th scope="row">Trieu Truong</th>
                             <td>Populate database for Conjunctivitis, Constipation, and Cough</td>
                             <td>1 hour</td>
-                            <td><a href=""> WAR File</a> </td>
                             <td><a href="https://docs.google.com/document/d/1gjrqXQeMdd_49M8hm6ZgK4XD-ZBrniDzGLPZPniwsKQ/edit?usp=sharing"> WAR File</a> </td>
+                        </tr>
+                        <tr class="row2">
+                            <th scope="row">Marko Vulovic</th>
+                            <td></td>
+                            <td></td>
+                            <td><a href=""> WAR File</a></td>
+                        </tr>
+                        <tr class="row2">
+                            <th scope="row">Steve Priest</th>
+                            <td>Database creation</td>
+                            <td>3 hours</td>
+                            <td><a href=""> WAR File</a></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <br>
+
+    <div class="inner">
+        <div class="card-header">
+            <a class="collapsed card-link"
+               data-toggle="collapse"
+               href="#week6">
+                <h7>Week 6:  Oct 19-26</h7></a>
+        </div>
+        <div class="collapse"
+             data-parent="#accordion"
+             id="week6">
+            <div class="card-body">
+                <div class="card-body table-responsive">
+                    <br>
+                    <table class="inner">
+                        <thead>
+                        <tr>
+                            <th scope="col">Team Member</th>
+                            <th scope="col">Main Task</th>
+                            <th scope="col">Duration</th>
+                            <th scope="col">WAR Link</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="row2">
+                            <th scope="row">Delaney Ochs</th>
+                            <td></td>
+                            <td></td>
+                            <td><a href=""> WAR File</a></td>
+                        </tr>
+                        <tr class="row2">
+                            <th scope="row">Barbara Amoros</th>
+                            <td></td>
+                            <td></td>
+                            <td><a href=""> WAR File</a></td>
+                        </tr>
+                        <tr class="row2">
+                            <th scope="row">Trieu Truong</th>
+                            <td></td>
+                            <td></td>
+                            <td><a href=""> WAR File</a> </td>
                         </tr>
                         <tr class="row2">
                             <th scope="row">Marko Vulovic</th>
