--- a/deliverables.html
+++ b/deliverables.html
@@ -123,21 +123,21 @@
             </article>
             <article>
                 <header>
-                    <h3>Other stuff</h3>
+                    <h3>Release Plan</h3>
                 </header>
-                <p>Description</p>
+                <p>Fall Release Plan</p>
                 <footer>
-                    <a href="" class="button special">View</a>
+                    <a href="https://docs.google.com/document/d/16NOiwttEDICODshuJycX8SVf75MQ__wguk5Um7HVwYo/edit?usp=sharing" class="button special">View</a>
                     <br><hr>
                 </footer>
             </article>
             <article>
                 <header>
-                    <h3>Other stuff</h3>
+                    <h3>IAB Presentation Slides</h3>
                 </header>
-                <p>Description</p>
+                <p>Preview for the IAB</p>
                 <footer>
-                    <a href="" class="button special">View</a>
+                    <a href="https://docs.google.com/presentation/d/1jD3TjLMlLAJ-3rzSYMNRragm1P16tYT8d6Hvqe_SY6w/edit?usp=sharing" class="button special">View</a>
                     <br><hr>
                 </footer>
             </article>
