--- a/schedule.html
+++ b/schedule.html
@@ -63,6 +63,16 @@
                     <td>October 12</td>
                     <td>Software Development Plan due 10/19</td>
                 </tr>
+                <tr>
+                    <td>6</td>
+                    <td>October 19</td>
+                    <td>Fall Release Plan due 10/26</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td>October 26</td>
+                    <td>IAB Presentation 10/30</td>
+                </tr>
                 </tbody>
             </table>
         </div>
