--- a/wars.html
+++ b/wars.html
@@ -376,9 +376,9 @@
                         </tr>
                         <tr class="row2">
                             <th scope="row">Barbara Amoros</th>
-                            <td></td>
-                            <td></td>
-                            <td><a href=""> WAR File</a></td>
+                            <td>Database, Fix Documents, PP Presentation</td>
+                            <td>5 hours</td>
+                            <td><a href="https://drive.google.com/file/d/1eC-6cx1k69wQZIKk6IU-6ZTDa-h8fUvY/view?usp=sharing"> WAR File</a></td>
                         </tr>
                         <tr class="row2">
                             <th scope="row">Trieu Truong</th>
