--- a/wars.html
+++ b/wars.html
@@ -376,7 +376,7 @@
                         </tr>
                         <tr class="row2">
                             <th scope="row">Barbara Amoros</th>
-                            <td>Database, Fix Documents, PP Presentation</td>
+                            <td>Populate Database, Fix Documents, PP Presentation</td>
                             <td>5 hours</td>
                             <td><a href="https://drive.google.com/file/d/1eC-6cx1k69wQZIKk6IU-6ZTDa-h8fUvY/view?usp=sharing"> WAR File</a></td>
                         </tr>
