--- a/wars.html
+++ b/wars.html
@@ -438,8 +438,8 @@
                         </tr>
                         <tr class="row2">
                             <th scope="row">Barbara Amoros</th>
-                            <td></td>
-                            <td></td>
+                            <td>Worked on Database</td>
+                            <td>1 Hour</td>
                             <td><a href=""> WAR File</a></td>
                         </tr>
                         <tr class="row2">
