Added steve war for week 7

--- a/wars.html
+++ b/wars.html
@@ -456,8 +456,8 @@
                         </tr>
                         <tr class="row2">
                             <th scope="row">Steve Priest</th>
-                            <td></td>
-                            <td></td>
+                            <td>Completed Injuries, UTI, Sinusitis, and Throat Infection portions of database.</td>
+                            <td>2 hours</td>
                             <td><a href=""> WAR File</a></td>
                         </tr>
                         </tbody>
