Added WAR for week 8, changed naming convention for Delaney's picture

--- a/team.html
+++ b/team.html
@@ -36,7 +36,7 @@
         <div class="flex flex-4">
             <div class="box person">
                 <div class="image round">
-                    <img src="images/delaney.png" alt="Delaney" />
+                    <img src="images/Delaney.png" alt="Delaney" />
                 </div>
                 <h3>Delaney Ochs</h3>
                 <p>Project Lead</p>
