--- a/wars.html
+++ b/wars.html
@@ -467,6 +467,68 @@
         </div>
     </div>
 
+    <br>
+
+    <div class="inner">
+        <div class="card-header">
+            <a class="collapsed card-link"
+               data-toggle="collapse"
+               href="#week8">
+                <h7>Week 8:  Nov 2-9</h7></a>
+        </div>
+        <div class="collapse"
+             data-parent="#accordion"
+             id="week8">
+            <div class="card-body">
+                <div class="card-body table-responsive">
+                    <br>
+                    <table class="inner">
+                        <thead>
+                        <tr>
+                            <th scope="col">Team Member</th>
+                            <th scope="col">Main Task</th>
+                            <th scope="col">Duration</th>
+                            <th scope="col">WAR Link</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="row2">
+                            <th scope="row">Delaney Ochs</th>
+                            <td></td>
+                            <td></td>
+                            <td><a href=""> WAR File</a></td>
+                        </tr>
+                        <tr class="row2">
+                            <th scope="row">Barbara Amoros</th>
+                            <td></td>
+                            <td></td>
+                            <td><a href=""> WAR File</a></td>
+                        </tr>
+                        <tr class="row2">
+                            <th scope="row">Trieu Truong</th>
+                            <td></td>
+                            <td></td>
+                            <td><a href=""> WAR File</a> </td>
+                        </tr>
+                        <tr class="row2">
+                            <th scope="row">Marko Vulovic</th>
+                            <td></td>
+                            <td></td>
+                            <td><a href=""> WAR File</a></td>
+                        </tr>
+                        <tr class="row2">
+                            <th scope="row">Steve Priest</th>
+                            <td>Research Amazon RDS and Postman API</td>
+                            <td>3 hours</td>
+                            <td><a href=""> WAR File</a></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 </section>
 <!-- Footer -->
