--- a/wars.html
+++ b/wars.html
@@ -500,7 +500,7 @@
                         </tr>
                         <tr class="row2">
                             <th scope="row">Barbara Amoros</th>
-                            <td></td>
+                            <td>Research Deployment/Assemble Presentation</td>
                             <td></td>
                             <td><a href=""> WAR File</a></td>
                         </tr>
