--- a/wars.html
+++ b/wars.html
@@ -501,7 +501,7 @@
                         <tr class="row2">
                             <th scope="row">Barbara Amoros</th>
                             <td>Research Deployment/Assemble Presentation</td>
-                            <td></td>
+                            <td>3 hours</td>
                             <td><a href=""> WAR File</a></td>
                         </tr>
                         <tr class="row2">
