--- a/wars.html
+++ b/wars.html
@@ -122,9 +122,9 @@
                         <tbody>
                         <tr class="row2">
                             <th scope="row">Delaney Ochs</th>
-                            <td></td>
-                            <td></td>
-                            <td><a href=""> WAR File</a></td>
+                            <td>Vision Document</td>
+                            <td>2 hours</td>
+                            <td><a href="https://drive.google.com/file/d/1FNkKPnMNsO1sPPkOm2SQ2anxn8anfLYG/view?usp=sharing"> WAR File</a></td>
                         </tr>
                         <tr class="row2">
                             <th scope="row">Barbara Amoros</th>
@@ -246,9 +246,9 @@
                         <tbody>
                         <tr class="row2">
                             <th scope="row">Delaney Ochs</th>
-                            <td></td>
-                            <td></td>
-                            <td><a href=""> WAR File</a></td>
+                            <td>Prototype</td>
+                            <td>2 hours</td>
+                            <td><a href="https://drive.google.com/file/d/12TsR7JxAEtlfu2ynxdYaXhehz568Bop8/view?usp=sharing"> WAR File</a></td>
                         </tr>
                         <tr class="row2">
                             <th scope="row">Barbara Amoros</th>
@@ -308,9 +308,9 @@
                         <tbody>
                         <tr class="row2">
                             <th scope="row">Delaney Ochs</th>
-                            <td></td>
-                            <td></td>
-                            <td><a href=""> WAR File</a></td>
+                            <td>Iteration Plan</td>
+                            <td>3 hours</td>
+                            <td><a href="https://drive.google.com/file/d/1rC0_AaFpsfdWdu1vaFIUBssRqXr0ws1Q/view?usp=sharing"> WAR File</a></td>
                         </tr>
                         <tr class="row2">
                             <th scope="row">Barbara Amoros</th>
@@ -370,9 +370,9 @@
                         <tbody>
                         <tr class="row2">
                             <th scope="row">Delaney Ochs</th>
-                            <td></td>
-                            <td></td>
-                            <td><a href=""> WAR File</a></td>
+                            <td>Release Plan</td>
+                            <td>4 hours</td>
+                            <td><a href="https://drive.google.com/file/d/11fN6Bkvbq3V2t1f2nPza98yh3Sz1dZlW/view?usp=sharing"> WAR File</a></td>
                         </tr>
                         <tr class="row2">
                             <th scope="row">Barbara Amoros</th>
@@ -432,9 +432,9 @@
                         <tbody>
                         <tr class="row2">
                             <th scope="row">Delaney Ochs</th>
-                            <td></td>
-                            <td></td>
-                            <td><a href=""> WAR File</a></td>
+                            <td>Database</td>
+                            <td>3 hours</td>
+                            <td><a href="https://drive.google.com/file/d/1XQ3YMxh_d4m5uKz-JRoSWjUu6dSfXGUL/view?usp=sharing"> WAR File</a></td>
                         </tr>
                         <tr class="row2">
                             <th scope="row">Barbara Amoros</th>
@@ -494,9 +494,9 @@
                         <tbody>
                         <tr class="row2">
                             <th scope="row">Delaney Ochs</th>
-                            <td></td>
-                            <td></td>
-                            <td><a href=""> WAR File</a></td>
+                            <td>Update Documents, Complete database</td>
+                            <td>2 hours</td>
+                            <td><a href="https://drive.google.com/file/d/1rMNDSUWlHkJIUS0C6MLwELjXqcQimPx5/view?usp=sharing"> WAR File</a></td>
                         </tr>
                         <tr class="row2">
                             <th scope="row">Barbara Amoros</th>
