Added all my WARs

--- a/wars.html
+++ b/wars.html
@@ -140,9 +140,9 @@
                         </tr>
                         <tr class="row2">
                             <th scope="row">Marko Vulovic</th>
-                            <td></td>
-                            <td></td>
-                            <td><a href=""> WAR File</a></td>
+                            <td>Vision and Scope Document</td>
+                            <td>3 hours</td>
+                            <td><a href="https://docs.google.com/document/d/1nqkNLRzLyqWOzKq6sd_fidVYYqX53m0F4-NqVWGB0ak/edit?usp=sharing"> WAR File</a></td>
                         </tr>
                         <tr class="row2">
                             <th scope="row">Steve Priest</th>
@@ -204,7 +204,7 @@
                             <th scope="row">Marko Vulovic</th>
                             <td>Use cases 11, 12, and 13</td>
                             <td>3 hours</td>
-                            <td><a href=""> WAR File</a></td>
+                            <td><a href="https://docs.google.com/document/d/1k-FKNjey8g5otGkm5zHshPW_NlJO0R4M0aP6inJUfH4/edit?usp=sharing"> WAR File</a></td>
                         </tr>
                         <tr class="row2">
                             <th scope="row">Steve Priest</th>
@@ -264,9 +264,9 @@
                         </tr>
                         <tr class="row2">
                             <th scope="row">Marko Vulovic</th>
-                            <td></td>
-                            <td></td>
-                            <td><a href=""> WAR File</a></td>
+                            <td>App prototype</td>
+                            <td>1 hour</td>
+                            <td><a href="https://drive.google.com/file/d/1TQBjw0n-VZrfWqmXZz0cpKawmujnwscd/view?usp=sharing"> WAR File</a></td>
                         </tr>
                         <tr class="row2">
                             <th scope="row">Steve Priest</th>
@@ -326,9 +326,9 @@
                         </tr>
                         <tr class="row2">
                             <th scope="row">Marko Vulovic</th>
-                            <td></td>
-                            <td></td>
-                            <td><a href=""> WAR File</a></td>
+                            <td>Database</td>
+                            <td>1.5 hours</td>
+                            <td><a href="https://drive.google.com/file/d/1oJwN89mNXhe-eAHpOiovEumnJONk3pD6/view?usp=sharing"> WAR File</a></td>
                         </tr>
                         <tr class="row2">
                             <th scope="row">Steve Priest</th>
@@ -388,9 +388,9 @@
                         </tr>
                         <tr class="row2">
                             <th scope="row">Marko Vulovic</th>
-                            <td></td>
-                            <td></td>
-                            <td><a href=""> WAR File</a></td>
+                            <td>Completing Database Info</td>
+                            <td>5 hours</td>
+                            <td><a href="https://drive.google.com/file/d/12fhmHt6wArrY8zv-dnw1wG1Njp-h9OYD/view?usp=sharing"> WAR File</a></td>
                         </tr>
                         <tr class="row2">
                             <th scope="row">Steve Priest</th>
@@ -450,9 +450,9 @@
                         </tr>
                         <tr class="row2">
                             <th scope="row">Marko Vulovic</th>
-                            <td></td>
-                            <td></td>
-                            <td><a href=""> WAR File</a></td>
+                            <td>Still working on database</td>
+                            <td>1.5 hours</td>
+                            <td><a href="https://drive.google.com/file/d/1kzoiQFA8nh-Abs_jr8WRlU683AL6q7b6/view?usp=sharing"> WAR File</a></td>
                         </tr>
                         <tr class="row2">
                             <th scope="row">Steve Priest</th>
