Add pp presentation link

--- a/deliverables.html
+++ b/deliverables.html
@@ -163,11 +163,11 @@
             </article>
             <article>
                 <header>
-                    <h3>Other stuff</h3>
+                    <h3>Iteration #1 Presentation</h3>
                 </header>
-                <p>Description</p>
+                <p>Power Point Presentation for faculty</p>
                 <footer>
-                    <a href="" class="button special">View</a>
+                    <a href="https://docs.google.com/presentation/d/14qHZxL-KoecGL5Fgh7WSjiiKf3kZ_AIdLzjtq-aVT48/edit?usp=sharing" class="button special">View</a>
                     <br><hr>
                 </footer>
             </article>
