Added week 9 WAR

--- a/schedule.html
+++ b/schedule.html
@@ -73,6 +73,11 @@
                     <td>October 26</td>
                     <td>IAB Presentation 10/30</td>
                 </tr>
+                <tr>
+                    <td>8</td>
+                    <td>November 9</td>
+                    <td>Presentation and demo 11/16</td>
+                </tr>
                 </tbody>
             </table>
         </div>
