--- a/wars.html
+++ b/wars.html
@@ -556,9 +556,9 @@
                         <tbody>
                         <tr class="row2">
                             <th scope="row">Delaney Ochs</th>
-                            <td></td>
-                            <td></td>
-                            <td><a href=""> WAR File</a></td>
+                            <td>Use Case: Admin Web Portal</td>
+                            <td>6 hours</td>
+                            <td><a href="https://drive.google.com/file/d/1jNMi92nFq540rl7tjtWT4X20IzMeVbFr/view?usp=sharing"> WAR File</a></td>
                         </tr>
                         <tr class="row2">
                             <th scope="row">Barbara Amoros</th>
