--- a/wars.html
+++ b/wars.html
@@ -562,8 +562,8 @@
                         </tr>
                         <tr class="row2">
                             <th scope="row">Barbara Amoros</th>
-                            <td></td>
-                            <td></td>
+                            <td>Android XML Screens</td>
+                            <td>3 hours</td>
                             <td><a href=""> WAR File</a></td>
                         </tr>
                         <tr class="row2">
