--- a/wars.html
+++ b/wars.html
@@ -326,7 +326,7 @@
                         </tr>
                         <tr class="row2">
                             <th scope="row">Marko Vulovic</th>
-                            <td>Database</td>
+                            <td>Database population</td>
                             <td>1.5 hours</td>
                             <td><a href="https://drive.google.com/file/d/1oJwN89mNXhe-eAHpOiovEumnJONk3pD6/view?usp=sharing"> WAR File</a></td>
                         </tr>
@@ -512,15 +512,15 @@
                         </tr>
                         <tr class="row2">
                             <th scope="row">Marko Vulovic</th>
-                            <td></td>
-                            <td></td>
+                            <td>Database Population and MongoDB Research</td>
+                            <td>3 hours</td>
                             <td><a href=""> WAR File</a></td>
                         </tr>
                         <tr class="row2">
                             <th scope="row">Steve Priest</th>
                             <td>Research Amazon RDS and Postman API</td>
                             <td>3 hours</td>
-                            <td><a href=""> WAR File</a></td>
+                            <td><a href="https://drive.google.com/file/d/1CX2mC_4KBicWiajo4HId_iq-ik79F383/view?usp=sharing"> WAR File</a></td>
                         </tr>
                         </tbody>
                     </table>
@@ -574,8 +574,8 @@
                         </tr>
                         <tr class="row2">
                             <th scope="row">Marko Vulovic</th>
-                            <td></td>
-                            <td></td>
+                            <td>Create Admin Portal</td>
+                            <td>6 hours</td>
                             <td><a href=""> WAR File</a></td>
                         </tr>
                         <tr class="row2">
